--- a/view merit.html
+++ b/view merit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Registration</title>
+    <title>Merit Management - View Merit Application</title>
     <link rel="shortcut icon" href="./images/logo.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -18,20 +18,15 @@
             <h2>My<span class="danger">Petakom</span></h2>
         </div>
         <div class="navbar">
-    
             <a href="PROFILE.html">
                 <span class="material-icons-sharp">person</span>
                 <h3>PROFILE</h3>
-            </a> 
-            <a href="Event Management (Register event).html">
-                <span class="material-icons-sharp">badge</span>
-                <h3>EVENT MANAGEMENT</h3>
-            </a> 
-            <a href="Merit Management.html">
+            </a>
+            <a href="Merit Management (View Merit Application).html">
                 <span class="material-icons-sharp">star</span>
                 <h3>MERIT MANAGEMENT</h3>
-            </a> 
-            <a href="#">
+            </a>
+            <a href="#logout">
                 <span class="material-icons-sharp">logout</span>
                 <h3>Logout</h3>
             </a>
@@ -68,38 +63,49 @@
             </div>
         </aside>
 
+
         <main>
-            <h1>Event Registration</h1>
-            <div class="event-form">
-                <h2>Register New Event</h2>
-                <form>
-                    <div class="form-group">
-                        <label for="eventName">Event Name</label>
-                        <input type="text" id="eventName" name="eventName" placeholder="Enter Event Name" required>
-                    </div>
+            <h1>Merit Management - View Merit Application</h1>
 
-                    <div class="form-group">
-                        <label for="eventStatus">Event Status</label>
-                        <input type="text" id="eventStatus" name="eventStatus" placeholder="Enter Event Status" required>
-                    </div>
+            <div class="merit-application">
+                <div class="merit-header">
+                    <h3>COMBAT 2025</h3>
+                    <p><strong>EVENT NAME:</strong> COMBAT 2025</p>
+                    <p><strong>DATE AND TIME:</strong> 29/12/2024, 5:00 P.M.</p>
+                </div>
 
-                    <div class="form-group">
-                        <label for="eventDate">Date and Time</label>
-                        <input type="datetime-local" id="eventDate" name="eventDate" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="geolocation">Geolocation</label>
-                        <input type="text" id="geolocation" name="geolocation" placeholder="Enter Geolocation" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="approvalLetter">Approval Letter</label>
-                        <input type="file" id="approvalLetter" name="approvalLetter" required>
-                    </div>
-
-                    <button type="submit">Submit</button>
-                </form>
+                <div class="merit-table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>COMMITTEE NAME</th>
+                                <th>MATRIC ID</th>
+                                <th>ROLE</th>
+                                <th>MERIT APPLICATION STATUS</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>MUHAMMAD AIZUL IZMIL BIN ABDUL</td>
+                                <td>CB23078</td>
+                                <td>PROGRAM DIRECTOR</td>
+                                <td class="claimed">CLAIMED</td>
+                            </tr>
+                            <tr>
+                                <td>NOAH ADRIAN BIN ZACK</td>
+                                <td>CD22046</td>
+                                <td>SECRETARY</td>
+                                <td class="in-progress">IN-PROGRESS</td>
+                            </tr>
+                            <tr>
+                                <td>NATASHA BINTI SOBRI</td>
+                                <td>26/12/2024</td>
+                                <td>TREASURER</td>
+                                <td class="rejected">REJECTED</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </main>
     </div>
